# AlgoTradeV2

./: .gitignore  CMakeLists.txt  README.md
include/AlgoTradeV2/: fundamentalStrat.hpp  fundementalData.hpp  fxData.hpp  marketData.hpp  momStrat.hpp  pnbStrat.hpp  pneStrat.hpp  strat.hpp  strategy.hpp  testData.hpp  timeFunctions.hpp
pythonGraph/: main.py
pythonGraph/pythonGraph/: pyvenv.cfg
src/: fundamentalStrat.cpp  fundementalData.cpp  fxData.cpp  main.cpp  marketData.cpp  momStrat.cpp  pnbStrat.cpp  pneStrat.cpp  strat.cpp  testData.cpp
tests/: data.txt  generateTestData.cpp  testData.hpp
